# RepoSentry

./: CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRD.md  README.md  TESTING.md  config.example.yml  legacy-pull-script.sh
.claude/hooks/: generate-tests.md  update-documentation.md
.github/workflows/: release.yml  test.yml
docs/: CONFIGURATION.md  commit-messages.md  implementation-status.md
src/: config.rs  config.rs.tests.tmp  daemon.rs  discovery.rs  git.rs  github.rs  health.rs  lib.rs  main.rs  state.rs  sync.rs
src/tui/: app.rs  events.rs  mod.rs  widgets.rs
tests/: integration_tests.rs
tests/common/: mod.rs
